Create markdown files and Readme
Co-Authored-By: Johannes Rabauer <8188460+JohannesRabauer@users.noreply.github.com>